--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,7 +14,7 @@
         android:textSize="24sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonInfo"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_200"
