--- a/app/src/main/res/layout/activity_crt_chg_screen.xml
+++ b/app/src/main/res/layout/activity_crt_chg_screen.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="409dp"
-        android:layout_height="349dp"
+        android:layout_width="380dp"
+        android:layout_height="344dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,25 +52,25 @@
 
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/linearLayout3"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         app:layout_constraintVertical_bias="0.951">
 
         <Button
             android:id="@+id/buttonCancel"
-            android:layout_width="146dp"
-            android:layout_height="57dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/cncl" />
 
         <Button
             android:id="@+id/buttonSave"
-            android:layout_width="146dp"
+            android:layout_width="wrap_content"
             android:layout_height="56dp"
             android:layout_marginLeft="117dp"
             android:text="@string/sv" />
